<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DBXDroid Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">Add</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="student_dept">Student Dept</string>
    <string name="view_all">View All</string>
    <string name="reset_fields">Reset Fields</string>

</resources>
